--- a/Unreal Projects/HorrorEngine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/HorrorEngine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/HorrorEngine/Maps/Overview
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
@@ -1013,7 +1013,7 @@ SecretPainting_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1034,7 +1034,7 @@ UNR=../../../../../../Users/Miguel/OneDrive/Documentos/GitHub/BloodMoon_Studios/
 BRUSH=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
 FBX=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
 FBXAnim=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
-GenericImport=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
+GenericImport=../../../../../../Users/Miguel/Downloads/diseno-payaso_915164-18967.jpg
 GenericExport=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
 GenericOpen=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
 GenericSave=../../../../../../Users/Alumno/Desktop/Unreal Projects/HorrorEngine/Content/
@@ -2086,6 +2086,16 @@ Voice.TimeStamp=2024.07.30-12.35.29
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.07.30-12.35.25
 MovieSceneCapture.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2024.04.23-16.49.45
+MaterialEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2024.04.23-16.49.43
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2024.04.23-16.49.43
+ExternalImagePicker.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2024.04.23-16.49.50
+TextureEditor.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2024.04.23-16.49.50
+UATHelper.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
