--- a/Unreal Projects/HorrorEngine/Saved/Config/WindowsEditor/Engine.ini
+++ b/Unreal Projects/HorrorEngine/Saved/Config/WindowsEditor/Engine.ini
@@ -73,3 +73,11 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
